salesforce/force-app/main/default/objects/Provider_Address__c/Provider_Address__c.object-meta.xml
<CustomObject>
    <description>Credentialing POC — Provider Addresses</description>
    <label>Provider Address</label>
    <pluralLabel>Provider Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>ADDR-{00000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>