salesforce/force-app/main/default/objects/Provider_Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Home</fullName>
        </value>
        <value>
            <fullName>Work</fullName>
        </value>
        <value>
            <fullName>Mailing</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>