salesforce/force-app/main/default/objects/Provider_Address__c/fields/Line1__c.field-meta.xml
<CustomField>
    <fullName>Line1__c</fullName>
    <label>Street Line 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>