salesforce/force-app/main/default/objects/Provider_Address__c/fields/Line2__c.field-meta.xml
<CustomField>
    <fullName>Line2__c</fullName>
    <label>Street Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>